--- a/themes/botwiki/src/styles/styles.less
+++ b/themes/botwiki/src/styles/styles.less
@@ -185,6 +185,7 @@ h1{
 h2{
   font-size: 2.5em;
   padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 h3{
@@ -680,6 +681,18 @@ p.screenshot.float-left{
   @media (min-width : @site-width-small){
     padding-right: 30px;
   }
+}
+
+p.empty-element{
+/* Inelegant fix for Pico wrapping images in P tags. */
+  padding: 0 20px 0 0 !important;
+  margin: 0 !important;
+/*
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+*/
 }
 
 
